--
-- V1 — Schema inicial, snapshot fiel do banco de desenvolvimento
-- (gerado por pg_dump em 2026-09-07 e limpo para o Flyway).
--

SET statement_timeout = 0;
SET lock_timeout = 0;
SET client_encoding = 'UTF8';
SELECT pg_catalog.set_config('search_path', '', false);

--
-- Name: contratos; Type: TABLE
--

CREATE TABLE public.contratos (
    id bigint NOT NULL,
    data_inicio date NOT NULL,
    duracao_meses integer NOT NULL,
    numero character varying(30) NOT NULL,
    objeto character varying(300) NOT NULL,
    saldo_restante numeric(19,2) NOT NULL,
    status character varying(20) NOT NULL,
    valor_total numeric(19,2) NOT NULL,
    dotacao_id bigint NOT NULL,
    fornecedor_id bigint NOT NULL,
    licitacao_id bigint,
    CONSTRAINT contratos_status_check CHECK (((status)::text = ANY ((ARRAY['VIGENTE'::character varying, 'ENCERRADO'::character varying, 'RESCINDIDO'::character varying])::text[])))
);

ALTER TABLE public.contratos ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.contratos_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);

--
-- Name: creditos_suplementares; Type: TABLE
--

CREATE TABLE public.creditos_suplementares (
    id bigint NOT NULL,
    data date NOT NULL,
    descricao character varying(200),
    valor numeric(19,2) NOT NULL,
    dotacao_destino_id bigint NOT NULL,
    dotacao_origem_id bigint NOT NULL
);

ALTER TABLE public.creditos_suplementares ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.creditos_suplementares_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);

--
-- Name: dotacoes_orcamentarias; Type: TABLE
--

CREATE TABLE public.dotacoes_orcamentarias (
    id bigint NOT NULL,
    ano_exercicio integer NOT NULL,
    codigo character varying(30) NOT NULL,
    descricao character varying(200) NOT NULL,
    saldo_atual numeric(19,2) NOT NULL,
    saldo_inicial numeric(19,2) NOT NULL
);

ALTER TABLE public.dotacoes_orcamentarias ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.dotacoes_orcamentarias_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);

--
-- Name: empenhos; Type: TABLE
--

CREATE TABLE public.empenhos (
    id bigint NOT NULL,
    ano_referencia integer NOT NULL,
    data_emissao date NOT NULL,
    mes_referencia integer NOT NULL,
    status character varying(20) NOT NULL,
    valor numeric(19,2) NOT NULL,
    contrato_id bigint NOT NULL,
    usuario_id bigint,
    CONSTRAINT empenhos_status_check CHECK (((status)::text = ANY ((ARRAY['EMPENHADO'::character varying, 'LIQUIDADO'::character varying, 'PAGO'::character varying, 'ANULADO'::character varying])::text[])))
);

ALTER TABLE public.empenhos ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.empenhos_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);

--
-- Name: fornecedores; Type: TABLE
--

CREATE TABLE public.fornecedores (
    id bigint NOT NULL,
    cnpj character varying(14) NOT NULL,
    email character varying(150),
    endereco character varying(250),
    nome character varying(150) NOT NULL,
    telefone character varying(30)
);

ALTER TABLE public.fornecedores ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.fornecedores_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);

--
-- Name: licitacoes; Type: TABLE
--

CREATE TABLE public.licitacoes (
    id bigint NOT NULL,
    data_abertura date NOT NULL,
    data_encerramento date,
    modalidade character varying(30) NOT NULL,
    numero_edital character varying(30) NOT NULL,
    objeto character varying(300) NOT NULL,
    status character varying(20) NOT NULL,
    valor_estimado numeric(19,2),
    fornecedor_vencedor_id bigint,
    CONSTRAINT licitacoes_modalidade_check CHECK (((modalidade)::text = ANY ((ARRAY['PREGAO'::character varying, 'CONCORRENCIA'::character varying, 'TOMADA_DE_PRECOS'::character varying, 'CONVITE'::character varying, 'CONCURSO'::character varying, 'LEILAO'::character varying, 'DIALOGO_COMPETITIVO'::character varying, 'DISPENSA'::character varying, 'INEXIGIBILIDADE'::character varying])::text[]))),
    CONSTRAINT licitacoes_status_check CHECK (((status)::text = ANY ((ARRAY['ABERTA'::character varying, 'ENCERRADA'::character varying, 'HOMOLOGADA'::character varying, 'CANCELADA'::character varying])::text[])))
);

ALTER TABLE public.licitacoes ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.licitacoes_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);

--
-- Name: movimentacoes_dotacao; Type: TABLE
--

CREATE TABLE public.movimentacoes_dotacao (
    id bigint NOT NULL,
    data_hora timestamp(6) without time zone NOT NULL,
    descricao character varying(200),
    tipo character varying(30) NOT NULL,
    valor numeric(19,2) NOT NULL,
    dotacao_id bigint NOT NULL
);

ALTER TABLE public.movimentacoes_dotacao ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.movimentacoes_dotacao_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);

--
-- Name: usuarios; Type: TABLE
--

CREATE TABLE public.usuarios (
    id bigint NOT NULL,
    email character varying(150) NOT NULL,
    nome character varying(100) NOT NULL,
    perfil character varying(20) NOT NULL,
    senha character varying(255) NOT NULL,
    CONSTRAINT usuarios_perfil_check CHECK (((perfil)::text = ANY ((ARRAY['ADMIN'::character varying, 'USUARIO'::character varying])::text[])))
);

ALTER TABLE public.usuarios ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.usuarios_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);

--
-- Name: contratos contratos_pkey; Type: CONSTRAINT
--

ALTER TABLE ONLY public.contratos
    ADD CONSTRAINT contratos_pkey PRIMARY KEY (id);

--
-- Name: creditos_suplementares creditos_suplementares_pkey; Type: CONSTRAINT
--

ALTER TABLE ONLY public.creditos_suplementares
    ADD CONSTRAINT creditos_suplementares_pkey PRIMARY KEY (id);

--
-- Name: dotacoes_orcamentarias dotacoes_orcamentarias_pkey; Type: CONSTRAINT
--

ALTER TABLE ONLY public.dotacoes_orcamentarias
    ADD CONSTRAINT dotacoes_orcamentarias_pkey PRIMARY KEY (id);

--
-- Name: empenhos empenhos_pkey; Type: CONSTRAINT
--

ALTER TABLE ONLY public.empenhos
    ADD CONSTRAINT empenhos_pkey PRIMARY KEY (id);

--
-- Name: fornecedores fornecedores_pkey; Type: CONSTRAINT
--

ALTER TABLE ONLY public.fornecedores
    ADD CONSTRAINT fornecedores_pkey PRIMARY KEY (id);

--
-- Name: licitacoes licitacoes_pkey; Type: CONSTRAINT
--

ALTER TABLE ONLY public.licitacoes
    ADD CONSTRAINT licitacoes_pkey PRIMARY KEY (id);

--
-- Name: movimentacoes_dotacao movimentacoes_dotacao_pkey; Type: CONSTRAINT
--

ALTER TABLE ONLY public.movimentacoes_dotacao
    ADD CONSTRAINT movimentacoes_dotacao_pkey PRIMARY KEY (id);

--
-- Name: dotacoes_orcamentarias uk_dotacoes_codigo; Type: CONSTRAINT
--

ALTER TABLE ONLY public.dotacoes_orcamentarias
    ADD CONSTRAINT uk_dotacoes_codigo UNIQUE (codigo);

--
-- Name: contratos uk_contratos_numero; Type: CONSTRAINT
--

ALTER TABLE ONLY public.contratos
    ADD CONSTRAINT uk_contratos_numero UNIQUE (numero);

--
-- Name: usuarios uk_usuarios_email; Type: CONSTRAINT
--

ALTER TABLE ONLY public.usuarios
    ADD CONSTRAINT uk_usuarios_email UNIQUE (email);

--
-- Name: licitacoes uk_licitacoes_edital; Type: CONSTRAINT
--

ALTER TABLE ONLY public.licitacoes
    ADD CONSTRAINT uk_licitacoes_edital UNIQUE (numero_edital);

--
-- Name: fornecedores uk_fornecedores_cnpj; Type: CONSTRAINT
--

ALTER TABLE ONLY public.fornecedores
    ADD CONSTRAINT uk_fornecedores_cnpj UNIQUE (cnpj);

--
-- Name: usuarios usuarios_pkey; Type: CONSTRAINT
--

ALTER TABLE ONLY public.usuarios
    ADD CONSTRAINT usuarios_pkey PRIMARY KEY (id);

--
-- Name: contratos fk_contratos_fornecedor; Type: FK CONSTRAINT
--

ALTER TABLE ONLY public.contratos
    ADD CONSTRAINT fk_contratos_fornecedor FOREIGN KEY (fornecedor_id) REFERENCES public.fornecedores(id);

--
-- Name: movimentacoes_dotacao fk_movimentacoes_dotacao; Type: FK CONSTRAINT
--

ALTER TABLE ONLY public.movimentacoes_dotacao
    ADD CONSTRAINT fk_movimentacoes_dotacao FOREIGN KEY (dotacao_id) REFERENCES public.dotacoes_orcamentarias(id);

--
-- Name: empenhos fk_empenhos_usuario; Type: FK CONSTRAINT
--

ALTER TABLE ONLY public.empenhos
    ADD CONSTRAINT fk_empenhos_usuario FOREIGN KEY (usuario_id) REFERENCES public.usuarios(id);

--
-- Name: contratos fk_contratos_licitacao; Type: FK CONSTRAINT
--

ALTER TABLE ONLY public.contratos
    ADD CONSTRAINT fk_contratos_licitacao FOREIGN KEY (licitacao_id) REFERENCES public.licitacoes(id);

--
-- Name: contratos fk_contratos_dotacao; Type: FK CONSTRAINT
--

ALTER TABLE ONLY public.contratos
    ADD CONSTRAINT fk_contratos_dotacao FOREIGN KEY (dotacao_id) REFERENCES public.dotacoes_orcamentarias(id);

--
-- Name: creditos_suplementares fk_creditos_destino; Type: FK CONSTRAINT
--

ALTER TABLE ONLY public.creditos_suplementares
    ADD CONSTRAINT fk_creditos_destino FOREIGN KEY (dotacao_destino_id) REFERENCES public.dotacoes_orcamentarias(id);

--
-- Name: licitacoes fk_licitacoes_vencedor; Type: FK CONSTRAINT
--

ALTER TABLE ONLY public.licitacoes
    ADD CONSTRAINT fk_licitacoes_vencedor FOREIGN KEY (fornecedor_vencedor_id) REFERENCES public.fornecedores(id);

--
-- Name: empenhos fk_empenhos_contrato; Type: FK CONSTRAINT
--

ALTER TABLE ONLY public.empenhos
    ADD CONSTRAINT fk_empenhos_contrato FOREIGN KEY (contrato_id) REFERENCES public.contratos(id);

--
-- Name: creditos_suplementares fk_creditos_origem; Type: FK CONSTRAINT
--

ALTER TABLE ONLY public.creditos_suplementares
    ADD CONSTRAINT fk_creditos_origem FOREIGN KEY (dotacao_origem_id) REFERENCES public.dotacoes_orcamentarias(id);