erDiagram
    ORGANIZACAO {
        bigint id PK
        varchar nome UK "cada grupo equivale a uma organizacao"
        varchar codigo_acesso UK "codigo universal de acesso reutilizavel — volta ao pool apos aceite"
        timestamp criado_em
        bigint criado_por FK "usuario que criou o grupo"
    }

    MEMBRO_ORGANIZACAO {
        bigint organizacao_id PK,FK
        bigint usuario_id PK,FK
        enum papel "ADMIN, OPERADOR, VISITANTE"
        timestamp desde
    }

    CONVITE_ORGANIZACAO {
        bigint id PK
        bigint organizacao_id FK
        varchar email UK "convite nominal por e-mail — aceitar ou recusar"
        enum papel "ADMIN, OPERADOR, VISITANTE"
        timestamp criado_em
        timestamp usado_em "null enquanto pendente"
    }

    USUARIO {
        bigint id PK
        varchar nome
        varchar email UK
        varchar senha_hash
        enum perfil "SUPER_ADMIN (global) ou USUARIO"
    }

    DOTACAO_ORCAMENTARIA {
        bigint id PK
        bigint organizacao_id FK "escopo do grupo"
        varchar codigo UK "unico por organizacao"
        varchar descricao
        numeric saldo_inicial "imutavel apos criacao"
        numeric saldo_atual "governado por movimentacoes"
        int ano_exercicio
    }

    MOVIMENTACAO_DOTACAO {
        bigint id PK
        bigint dotacao_id FK
        enum tipo "CREDITO, DEBITO, CREDITO_SUPLEMENTAR, ESTORNO"
        numeric valor
        varchar descricao
        timestamp data_hora
    }

    FORNECEDOR {
        bigint id PK
        bigint organizacao_id FK "escopo do grupo"
        varchar nome
        varchar cnpj UK "unico por organizacao, validado digito mod 11"
        varchar email
        varchar telefone
        varchar endereco
    }

    LICITACAO {
        bigint id PK
        bigint organizacao_id FK "escopo do grupo"
        varchar numero_edital UK "unico por organizacao"
        enum modalidade "9 valores - Leis 8666 e 14133"
        varchar objeto
        date data_abertura
        date data_encerramento
        enum status "ABERTA, ENCERRADA, HOMOLOGADA, CANCELADA"
        numeric valor_estimado
        bigint vencedor_id FK "opcional - definido ao encerrar"
    }

    CONTRATO {
        bigint id PK
        bigint organizacao_id FK "escopo do grupo"
        varchar numero UK "unico por organizacao"
        varchar objeto
        numeric valor_total "imutavel apos criacao"
        int duracao_meses "imutavel apos criacao"
        date data_inicio
        enum status "VIGENTE, ENCERRADO, RESCINDIDO"
        numeric saldo_restante "nasce igual ao valor_total"
        bigint dotacao_id FK "obrigatorio"
        bigint fornecedor_id FK "obrigatorio"
        bigint licitacao_id FK "opcional"
    }

    EMPENHO {
        bigint id PK
        bigint organizacao_id FK "escopo do grupo"
        varchar numero UK "sequencial universal por ano + organizacao (V11)"
        bigint contrato_id FK
        bigint usuario_id FK "auditoria de quem gerou"
        int mes_referencia
        int ano_referencia
        numeric valor "valor_mensal do contrato + residuo da ultima competencia"
        enum status "EMPENHADO, ANULADO, LIQUIDADO"
        date data_emissao
    }

    CREDITO_SUPLEMENTAR {
        bigint id PK
        bigint organizacao_id FK "escopo do grupo"
        bigint dotacao_origem_id FK "debitada"
        bigint dotacao_destino_id FK "creditada"
        numeric valor
        varchar descricao
        date data
    }

    ORGANIZACAO ||--o{ MEMBRO_ORGANIZACAO : "acolhe usuários"
    USUARIO ||--o{ MEMBRO_ORGANIZACAO : "participa de n grupos"
    ORGANIZACAO ||--o{ CONVITE_ORGANIZACAO : "convida"
    ORGANIZACAO ||--o{ DOTACAO_ORCAMENTARIA : "possui"
    ORGANIZACAO ||--o{ FORNECEDOR : "possui"
    ORGANIZACAO ||--o{ LICITACAO : "possui"
    ORGANIZACAO ||--o{ CONTRATO : "possui"
    ORGANIZACAO ||--o{ EMPENHO : "possui"
    ORGANIZACAO ||--o{ CREDITO_SUPLEMENTAR : "possui"
    DOTACAO_ORCAMENTARIA ||--o{ MOVIMENTACAO_DOTACAO : "registra"
    DOTACAO_ORCAMENTARIA ||--o{ CONTRATO : "orcamenta"
    FORNECEDOR ||--o{ LICITACAO : "vence"
    FORNECEDOR ||--o{ CONTRATO : "executa"
    LICITACAO |o--o| CONTRATO : "formaliza"
    CONTRATO ||--o{ EMPENHO : "rateia por competencia"
    CREDITO_SUPLEMENTAR }o--|| DOTACAO_ORCAMENTARIA : "origem"
    CREDITO_SUPLEMENTAR }o--|| DOTACAO_ORCAMENTARIA : "destino"
    USUARIO ||--o{ EMPENHO : "gera"